<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#ee004f"
    android:padding="0dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView"
        android:id="@+id/textView"
        android:background="#ffffff"
        android:layout_margin="0dp"
        android:gravity="bottom|right"
        android:textSize="30sp"
        android:nestedScrollingEnabled="false"
        android:maxLines="2"
        android:maxLength="17" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn7"
        android:id="@+id/btn7"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:maxWidth="90dp" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn8"
        android:id="@+id/btn8"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/btn7"
        android:layout_toEndOf="@+id/btn7"
        android:onClick="onClickNumber"
        android:maxWidth="90dp" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn9"
        android:id="@+id/btn9"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:maxWidth="90dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/btn8"
        android:layout_toEndOf="@+id/btn8" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn4"
        android:id="@+id/btn4"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn7"
        android:layout_toLeftOf="@+id/btn5"
        android:layout_toStartOf="@+id/btn5"
        android:onClick="onClickNumber" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn5"
        android:id="@+id/btn5"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn8"
        android:layout_toRightOf="@+id/btn7"
        android:layout_toEndOf="@+id/btn7"
        android:onClick="onClickNumber" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn6"
        android:id="@+id/btn6"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:layout_below="@+id/btn8"
        android:layout_toRightOf="@+id/btn5"
        android:layout_toEndOf="@+id/btn5" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn1"
        android:id="@+id/btn1"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn4"
        android:layout_toLeftOf="@+id/btn5"
        android:layout_toStartOf="@+id/btn5"
        android:onClick="onClickNumber" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn2"
        android:id="@+id/btn2"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_alignTop="@+id/btn1"
        android:layout_toRightOf="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"
        android:onClick="onClickNumber" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn3"
        android:id="@+id/btn3"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:layout_below="@+id/btn6"
        android:layout_alignLeft="@+id/btn6"
        android:layout_alignStart="@+id/btn6" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btnClear"
        android:id="@+id/btnClear"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btn1"
        android:layout_alignLeft="@+id/btn1"
        android:layout_alignStart="@+id/btn1"
        android:onClick="onClickClear" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btn0"
        android:id="@+id/btn0"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:onClick="onClickNumber"
        android:layout_below="@+id/btn1"
        android:layout_toRightOf="@+id/btn1"
        android:layout_toEndOf="@+id/btn1" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btnEqual"
        android:id="@+id/btnEqual"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:onClick="onClickEqual"
        android:layout_below="@+id/btn2"
        android:layout_toRightOf="@+id/btn2"
        android:layout_toEndOf="@+id/btn2" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btnPlus"
        android:id="@+id/btnPlus"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:onClick="onClickOperator"
        android:maxWidth="90dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/btn9"
        android:layout_toEndOf="@+id/btn9" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btnMinus"
        android:id="@+id/btnMinus"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:onClick="onClickOperator"
        android:layout_below="@+id/btn9"
        android:layout_toRightOf="@+id/btn9"
        android:layout_toEndOf="@+id/btn9" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btnMult"
        android:id="@+id/btnMult"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:layout_below="@+id/btnMinus"
        android:onClick="onClickOperator"
        android:layout_alignLeft="@+id/btnMinus"
        android:layout_alignStart="@+id/btnMinus"
        android:layout_above="@+id/btnEqual"
        android:layout_alignRight="@+id/btnMinus"
        android:layout_alignEnd="@+id/btnMinus" />

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/btnDiv"
        android:id="@+id/btnDiv"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:background="#4d4d4d"
        android:onClick="onClickOperator"
        android:layout_below="@+id/btn3"
        android:layout_toRightOf="@+id/btn3"
        android:layout_toEndOf="@+id/btn3" />
</RelativeLayout>